--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,15 @@
 
     </string-array>
 
+
+    <string-array name="state">
+        <item>UP</item>
+        <item>UK</item>
+        <item>PB</item>
+        <item>HD</item>
+        <item>DE</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
