--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string-array name="image_ids">
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+        <item>@drawable/pager3</item>
+    </string-array>
 
 </resources>
