--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string-array name="gender">
         <item>GENDER</item>
         <item>Male</item>
-        <item>FeMale</item>
+        <item>Female</item>
     </string-array>
 
     <string-array name="experince">
