--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,17 +9,28 @@
 
 
     <string-array name="gender">
-        <item>GENDER</item>
+        <item>Select Gender</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
 
     <string-array name="experince">
-        <item>EXPERIENCE</item>
+        <item>Select Experience</item>
         <item>1</item>
         <item>2</item>
     </string-array>
+    <string-array name="floodlight">
+        <item>Select Flood Light</item>
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
 
+    <string-array name="daynight">
+        <item>Select Day/Night</item>
+        <item>Day</item>
+        <item>Night</item>
+        <item>Day and Night</item>
+    </string-array>
     <string-array name="sportsname">
         <item>SELECT SPORTS</item>
         <item>CRICKET</item>
